# vidar

./: .env  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  af_unix.c  android_patch_manager.py  android_platform_vulnerability_report_2025_1.json  bazel-bin  bazel-out  bazel-testlogs  bazel-vidar  call_gemini.py  config.yaml  edit_distance.py  features.csv  features_with_predictions.csv  fetch_patch.py  full_cve_report_2025032.json  garbage.c  garbage.c.orig  garbage.c.rej  generate.py  generate2.py  generated_patch.diff  index_file.py  line_metrics.py  llm_patch_runner.py  main(eugeneApproach).py  main.py  main_copy.py  microsoft-codebert.py  ori.diff  patch_adopter.py  patch_adopter_2.py  patch_adopter_temp.py  patch_fetcher.py  patched_output.diff  paths.py  pipeline_runner.py  (+23 more)
LLM_runs_input_nonvanir/: README.md  process_json_vulns.py
LLM_runs_input_nonvanir_approach1/: README.md  approach1.py  requirements.txt
LLM_runs_input_nonvanir_approach2/: README.md  add_line_number.py  analyze_versions.py  android_patch_manager.py  approach2.py  approach2_2_copy.py  approach2_blind_retry.py  approach2_blind_retry_1.py  approach2_blind_retry_2.py  approach2_blind_retry_full_context.py  approach2_blind_retry_ori.py  approach2_blind_retry_reduced_base_prompt.py  approach2_blind_retry_snippet_context.py  approach2_blind_retry_v2.py  approach2_smart_retry.py  approach2_smart_retry_2_noguideline.py  approach2_smart_retry_hunk_construction_indentation.py  approach2_smart_retry_less_error_msg.py  approach2_smart_retry_noguideline.py  approach2_smart_retry_with_few_shot copy.py  approach2_smart_retry_with_few_shot_hunk_construction_indentation.py  approach2_smart_retry_with_few_shot_hunk_construction_indentation_with_line_number.py  approach2_smart_retry_with_few_shot_hunk_construction_indentation_with_line_number_with_upstream_patch.py  approach3_self_correcting_agent.py  approach3_self_correcting_agent_cot.py  example_json.json  extract_prompts.py  llm_meta_analyzer.py  meta_prompting_data.csv  prompt.json  prompt_ori.json  prompts.json  requirements.txt  summarizer.py  version_parser.py
analyze_llm_output/: analyze_failed_vulns.py  analyze_llm_logs.py  requirements_charts.txt  run_analyze_failed_vuns.sh
code_search/: README.md  code_search.py  create_faiss_index.py  search_from_index.py  semantic_search.py  vector_indexer.py
consolidation/: README.md  patch_adopter.py  patch_fetcher.py
download_diff/: fetch_diff.py  patch_fetcher.py  run_diff_fetcher.py
patch_adoption/: BUILD.bazel  ast_processor.py  backporter.py  inline_merge_generator.py  patch.diff  patch.py  patch_adopter.py  patch_adopter_ssh.py  patch_adopter_test.py  patch_manager.py  patch_runner.py  rejected_patch_processor.py
(+6251 files in other folders)
