workspace(name = "vidar")

# Load Bazel tools
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Install Python rules
http_archive(
    name = "rules_python",
    sha256 = "8c15896f6686beb5c631a4459a3aa8392daccaab805ea899c9d14215074b60ef",
    strip_prefix = "rules_python-0.17.3",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.17.3.tar.gz",
)

# Load Python toolchains
load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

# Register Python 3.9 as the toolchain
python_register_toolchains(
    name = "python3_9",
    python_version = "3.9",
)

# Load pip dependency management
load("@rules_python//python:pip.bzl", "pip_parse")
load("@python3_9//:defs.bzl", "interpreter")

pip_parse(
    name = "vidar_deps",
    python_interpreter_target = interpreter,
    requirements_lock = "//:requirements_lock.txt",

)

load("@vidar_deps//:requirements.bzl", "install_deps")
install_deps()

# Load installed dependencies
load("@vidar_deps//:requirements.bzl", "requirement")
