load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "patch_manager",
    srcs = ["patch_manager.py"],
    deps = [
        ":backporter",
        requirement("absl-py"),
        requirement("requests"),
    ],
)

py_library(
    name = "backporter",
    srcs = ["backporter.py"],
    deps = [
        requirement("absl-py"),
    ],
)